overflow corrected

--- a/portfolio_frontend/src/Assets/CSS/Home.scss
+++ b/portfolio_frontend/src/Assets/CSS/Home.scss
@@ -7,7 +7,6 @@
     color: white;
     overflow: hidden;
     padding: 20px;
-    overflow: auto;
 
     &::-webkit-scrollbar{
         display: none;
